src-07-charge-auth/objects/Charge_Year__c/fields/Days_Since_Year_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Year_Start__c</fullName>
    <formula>TODAY() - Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Year Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>