src-07-charge-auth/objects/Charge_Year__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <formula>AND(
TODAY() &gt;= Start_Date__c, 
TODAY() &lt;= End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isActive?</label>
    <type>Checkbox</type>
</CustomField>