src-07-charge-auth/objects/Charge_Year__c/fields/Number_of_Attended_Appointments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attended_Appointments__c</fullName>
    <label>Number of Attended Appointments</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>