src-07-charge-auth/objects/Charge_Year__c/fields/Step_2_Target__c.field-meta.xml
<CustomField>
    <fullName>Step_2_Target__c</fullName>
    <inlineHelpText>Number of cases where Step 2 treatment is provided</inlineHelpText>
    <label>Step 2 Target</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>