src-07-charge-auth/objects/Charge_Year__c/fields/Step_3_Target__c.field-meta.xml
<CustomField>
    <fullName>Step_3_Target__c</fullName>
    <inlineHelpText>Number of cases where Step 3 treatment is provided</inlineHelpText>
    <label>Step 3 Target</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>