src-07-charge-auth/objects/Charge_Year__c/fields/Total_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Target__c</fullName>
    <formula>Step_1_Target__c + Step_2_Target__c + Step_3_Target__c</formula>
    <label>Total Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>